# essentials-openapi

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
openapidocs/: __init__.py  common.py  logs.py  main.py  v2.py  v3.py  v31.py
openapidocs/commands/: docs.py
openapidocs/mk/: __init__.py  common.py  contents.py  generate.py  jinja.py  md.py  texts.py
openapidocs/mk/v3/: __init__.py  examples.py
openapidocs/mk/v3/views_markdown/: README.md  layout.html
openapidocs/mk/v3/views_mkdocs/: README.md  layout.html
openapidocs/mk/v3/views_plantuml_api/: README.md  layout.html
openapidocs/mk/v3/views_plantuml_schemas/: README.md  layout.html
openapidocs/utils/: source.py  web.py
tests/: common.py  conftest.py  serverfixtures.py  test_cli.py  test_common.py  test_mk.py  test_mk_contents.py  test_mk_v3.py  test_oas31.py  test_template_override.py  test_v2.py  test_v3.py  test_v31.py
tests/res/: example1-api-output.wsd  example1-openapi.json  example1-openapi.yaml  example1-output-plain.md  example1-output.md  example1-schemas-output.wsd  example2-output.md  example3-openapi.json  example3-output.md  example4-split-openapi.yaml  example4-split-output.md  example5-openapi.yaml  example5-output.md  example6-openapi.yaml  example6-output.md  example7-openapi.yaml  example7-output.md  example8-openapi.yaml  example8-output-plain.md  example8-output.md  example9-openapi.yaml  oas31-openapi.yaml
tests/res/spec-fragments/: openapi.yaml  types.yaml
tests/res/spec/parameters/: UserIdentifier.yml  WorkflowId.yml  _index.yml
tests/res/spec/paths/: UserById.yml  Users.yml
tests/res/spec/responses/: NotFound.yml  Unauthorized.yml  UserInformation.yml
(+34 files in other folders)
